Enhanced project dataset by adding descriptions for each project in the CSV file. Removed the requirements.txt file as it is no longer needed. Updated the results.html template to display project descriptions alongside titles. Updated binary images for "Movie Recommendation System" and "Web-based Chat Application".

--- a/templates/results.html
+++ b/templates/results.html
@@ -60,6 +60,14 @@
             color: #222;
         }
 
+        .project-description {
+            font-size: 1rem;
+            color: #666;
+            margin-top: 5px;
+            padding-bottom: 10%;
+
+        }
+
         .links a {
             margin-right: 15px;
             text-decoration: none;
@@ -106,6 +114,7 @@
             {% for project in projects %}
             <div class="project-item">
                 <div class="project-title">{{ project['Title'] }}</div>
+                <p class="project-description">{{ project['Description'] }}</p>
                 <div class="links">
                     <a href="{{ project['GitHub Link'] }}" target="_blank">GitHub</a>
                     <a href="{{ project['YouTube Link'] }}" target="_blank">YouTube</a>
